environments/k8s/base/services/api-gateway/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-node-port
  namespace: ecommerce-app
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 8080 
      nodePort: 30080
