environments/k8s/base/services/api-gateway/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-gateway-ingress-route
  namespace: ecommerce-app
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ecommerce-app.spsohcmut.xyz`)  # Replace with your domain
      kind: Rule
      services:
        - name: api-gateway-svc
          port: 80
  tls:
    certResolver: letsencrypt
    domains:
      - main: "ecommerce-app.spsohcmut.xyz"
